# django-itemlist

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: pythonpublish.yml
demo/: asgi.py  settings.py  urls.py  wsgi.py
demo/example/: apps.py  forms.py  models.py  urls.py  views.py
demo/example/fixtures/: initial-data.yml
demo/example/migrations/: 0001_initial.py
demo/example/templates/example/: home.html  institution_list.html  person_list.html  subject_list.html
demo/templates/: base.html  list.html
itemlist/: apps.py  filters.py  views.py
itemlist/templates/itemlist/: embed_list.html  filters.html  item_list.html  list.html  pagination.html  row.html
itemlist/templatetags/: itemlist.py
